added changes alignment

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters flex-row-reverse">
             <div class="col-md-4">
-                <img src="img/surprisebox.png" class="card-img" alt="changing picture">
+                <img src="img/surprisebox.png" class="card-img" alt="surprisebox">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title" align="center">Find the perfect box for you</h5>
-                    <p class="card-text" align="center">
+                    <h5 class="card-title" >Find the perfect box for you</h5>
+                    <p class="card-text" >
 
 
                         No matter what you're interested in,
@@ -176,12 +176,12 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
-                <img src="img/luckydip.jpg" class="card-img" alt="changing picture">
+                <img src="img/luckydip.jpg" class="card-img" alt="luckydip">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title" align="center">Find monthly new boxes</h5>
-                    <p class="card-text" align="center">Browse hundreds of subscription boxes,
+                    <h5 class="card-title" >Find monthly new boxes</h5>
+                    <p class="card-text" >Browse hundreds of subscription boxes,
                         all in one place.</p>
 
                 </div>
@@ -193,13 +193,13 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters flex-row-reverse ">
             <div class="col-md-4">
-                <img src="img/mailbox.jpeg" class="card-img" alt="changing picture">
+                <img src="img/mailbox.jpeg" class="card-img" alt="mailbox">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title" align="center">Receive fun things in your mail
+                    <h5 class="card-title">Receive fun things in your mail
                     </h5>
-                    <p class="card-text" align="center">Receive curated products just for you
+                    <p class="card-text">Receive curated products just for you
                         on a recurring basis.</p>
 
                 </div>
