removed depricated align tag in index page, added icon to brand a in navbar

--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
 <!-- nav bar -->
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-    <a class="navbar-brand" href="../index.html">Lucky Box</a>
+    <a class="navbar-brand" href="../index.html"><img src="../img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -64,7 +64,7 @@
                 <h1>Contact us!</h1>
                 <p> voice your concerns, or simply drop a nice comment.</p>
 
-                <input class="input1" type="text" name="name" placeholder="Name"/>
+                <input class="input1" name="name" placeholder="Name" type="text"/>
                 <label  class="label-name"><span class="content-name"></span></label>
 
                 <div class="wrap-input1 required">
@@ -90,7 +90,7 @@
         </div>
         <div class="col-md-6 part2">
             <!--contact links-->
-            <img class="img-fluid" class="img-thumbnail"  alt="Responsive image" src="../ICONS/social-02.png">
+            <img class="img-fluid img-thumbnail"  alt="Responsive image" src="../ICONS/social-02.png">
 
 
             <div>
