--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Subscription box, box, gift, gift idea, custom box">
+    <meta name="keywords" content="Subscription box, box, gift, gift idea, custom box"><!--keywords that help SEO-->
     <meta name="robots" content="index,follow"> <!-- search engine crawler will follow all indexes of the page, appear on google faster -->
-    <link rel="icon" href="img/icon.png"> <!--icon tab>-->
+    <link rel="icon" href="img/bg-1.jpg"> <!--icon that appears on tab-->
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Imane, Steve, Samira, Moeti">
-    <meta name="description" content="Subscription box that is fully customisable">
+    <meta name="description" content="Subscription box that is fully customisable"><!--description that appears on google search-->
+    <!--links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,14 +17,12 @@
     <title>Luckybox</title>
 </head>
 <body>
-
-
-<header>
+    <header>
 <!-- navbar -->
 
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-        <a class="navbar-brand" href="index.html">Lucky Box</a>
+        <a class="navbar-brand" href="index.html"><img src="img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -121,7 +120,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md-4 border-0 " align="center">
+        <div class=" col-md-4 border-0  mx-auto text-center">
             <img class="rounded-circle" src="img/avenger.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body" >
                 <h5 class="card-title">Filmbox</h5>
@@ -130,7 +129,7 @@
             </div>
         </div>
 
-        <div class="col-md-4 border-0" align="center">
+        <div class="col-md-4 border-0 mx-auto text-center">
             <img class="rounded-circle" src="img/snacks.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body">
                 <h5 class="card-title">Snackbox</h5>
@@ -139,7 +138,7 @@
             </div>
         </div>
 
-        <div class="col-md-4 border-0" align="center">
+        <div class=" col-md-4 border-0 mx-auto text-center">
             <img class="rounded-circle" src="img/stationary.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body" >
                 <h5 class="card-title">Stationarybox</h5>
