--- a/html/Login.html
+++ b/html/Login.html
@@ -28,7 +28,7 @@
 
 <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-        <a class="navbar-brand" href="../index.html">Lucky Box</a>
+        <a class="navbar-brand" href="../index.html"><img src="../img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
