--- a/html/custom.html
+++ b/html/custom.html
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="/bootstrap/bootstrap-grid.min.css">
 
 </head>
+<body>
 
-<div>
 <!-- navbar-->
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <nav id="top" class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <a class="navbar-brand" href="../index.html"><img src="../img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
     <!-- featurette-->
 
 
-<h1  class="text-center  titleRed">Customize your box</h1>
+        <h1 class="text-center titleRed">Customize your box</h1>
 
 
         <div class="container  bgcontainer p-5">
@@ -64,64 +64,57 @@
                 <h2 class="step stepcount"> Step 1</h2>
                 <h2 class="stepInfo">Select the theme you like!</h2>
             </div>
+
             <div class="row">
                 <div class=" col-sm-12 col-md-6">
-                         <div id="carouselExampleControls" class="carousel slide  pb-3" data-ride="carousel col-6">
-        <div class="carousel-inner ">
-            <div class="carousel-item active">
-                <img class="d-block w-auto" src="../img/moviebanner.jpg" height="300px" alt="First slide">
-                <div class="carousel-caption">
-                    <p><a class="btn btn-lg btn-primary" href="#movierow" role="button">Movies</a></p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-auto" src="../img/snackbanner2.png" height="300px"  alt="Second slide">
-
-                <div class="carousel-caption">
-
-                    <p><a class="btn btn-lg btn-primary" href="#snackrow" role="button">Snacks</a></p>
-                </div>
-
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-auto" src="../img/hobbybanner2.jpg" height="300px"  alt="Third slide">
-
-                <div class="carousel-caption">
-
-                    <p><a class="btn btn-lg btn-primary" href="#hobbyrow" role="button">Hobby</a></p>
-
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+                  <div id="carouselExampleControls" class="carousel slide  pb-3" data-ride="carousel col-6">
+                    <div class="carousel-inner ">
+                        <div class="carousel-item active">
+                            <img class="d-block w-auto" src="../img/moviebanner.jpg" height="300px" alt="First slide">
+                            <div class="carousel-caption">
+                            <p><a class="btn btn-lg btn-primary" href="#movierow" role="button">Movies</a></p>
                             </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block w-auto" src="../img/snackbanner2.png" height="300px"  alt="Second slide">
+                            <div class="carousel-caption">
+                            <p><a class="btn btn-lg btn-primary" href="#snackrow" role="button">Snacks</a></p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block w-auto" src="../img/hobbybanner2.jpg" height="300px"  alt="Third slide">
+                            <div class="carousel-caption">
+                            <p><a class="btn btn-lg btn-primary" href="#hobbyrow" role="button">Hobby</a></p>
+                        </div>
+                    </div>
+                   </div>
+
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
 
                 <div class=" col-sm-12 col-md-6">
-                    <h2>Choose your desired theme! <span>It'll blow your mind.</span></h2>
-
+                    <h3>Choose your desired theme!</h3>
                     <p class="carouselInfo">We provide you three main themes. there are Limited edtion items in each category. You can browse the items on the last step.</p>
                 </div>
             </div>
 
         </div>
-</div>
+
 
 <!-- step 2 -->
 
-<div  class="container bgcontainer mt-4 pb-3">
-
-
-
-    <!-- 3 large colums with text centered -->
-
+    <div  class="container bgcontainer mt-4 pb-3">
 
                 <div class="containerpt-5 d-flex pt-5 pl-5">
                     <h2 class="step stepcount"> Step 1</h2>
@@ -153,24 +146,18 @@
 
 
     </div>
-</div>
 
+<!-- step 3 list items -->
 
-<!-- ///////////////////////////////////BEGINNING OF items -->
-
-<div class="bgcontainer">
-<div class="mt-4 pb-3">
-    <div class="container row steptitle pt-5">
-        <h2 class="step stepcount"> Step 3</h2>
-        <h2 class="stepInfo">Select your items!</h2>
+<div class="bgcontainer pb-10">
+    <div class="mt-4 pb-3">
+        <div class="container row steptitle pt-5">
+            <h2 class="step stepcount"> Step 3</h2>
+            <h2 class="stepInfo">Select your items!</h2>
+        </div>
     </div>
 
-</div>
-
-<div id="lootlist">
-
-
-
+    <div id="lootlist">
 
     <div class="row pt-3" id="movierow">
         <div class="hover01">
@@ -266,23 +253,21 @@
 
 </div>
 <!-- footer -->
-<section class="footer">
+<footer class="footer sticky-footer">
 
-    <a href="#"><i class="fas fa-arrow-up"></i></a>
 
-    <footer id="sticky-footer" class=" bg-dark text-white-50">
-        <div class="container-fluid d-flex py-3">
+    <div class="container-fluid d-flex py-0 align-items-end">
 
-            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+        <p class=" flex-grow-1 py-3"> &copy; 2019 Lucky box &nbsp; &nbsp; <span class=" mr-auto pr-3"><a href="#top">Back to top</a></span></p>
 
-            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" width="30" height="30" alt="insta icon"></a>
+        <a class="py-4 pr-4" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" width="30" height="30"></a>
 
-            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30" alt="twitter icon"></a>
+        <a  class="py-4 pr-4" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30"></a>
 
-        </div>
+    </div>
 
-    </footer>
-</section>
+
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
