--- a/html/register.html
+++ b/html/register.html
@@ -22,7 +22,7 @@
 <header>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <nav id="top" class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <a class="navbar-brand" href="../index.html"><img src="../img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,25 +110,24 @@
     <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
 <!-- footer-->
-<section class="footer">
+<footer class="footer sticky-footer">
 
-    <a href="#"><i class="fas fa-arrow-up"></i></a>
 
-    <footer id="sticky-footer" class=" bg-dark text-white-50">
-        <div class="container-fluid d-flex py-3">
+    <div class="container-fluid d-flex py-0 align-items-end">
 
-            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+        <p class=" flex-grow-1 py-3"> &copy; 2019 Lucky box &nbsp; &nbsp; <span class=" mr-auto pr-3"><a href="#top">Back to top</a></span></p>
 
-            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" alt="insta icon" width="30" height="30"></a>
+        <a class="py-4 pr-4" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" width="30" height="30"></a>
 
-            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30"></a>
+        <a  class="py-4 pr-4" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30"></a>
 
-        </div>
+    </div>
 
-    </footer>
-</section>
-</body>
+
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
 </html>
