--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- navbar -->
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <nav  id="top" class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <a class="navbar-brand" href="index.html"><img src="img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -208,23 +208,21 @@
 </div>
 
 
-<section class="footer">
+<footer class="footer sticky-footer">
 
-    <a href="#"><i class="fas fa-arrow-up"></i></a>
 
-    <footer id="sticky-footer" class=" bg-dark text-white-50">
-        <div class="container-fluid d-flex py-3">
+        <div class="container-fluid d-flex py-0 align-items-end">
 
-            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+            <p class=" flex-grow-1 py-3"> &copy; 2019 Lucky box &nbsp; &nbsp; <span class=" mr-auto pr-3"><a href="#top">Back to top</a></span></p>
 
-            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+            <a class="py-4 pr-4" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
 
-            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
+            <a  class="py-4 pr-4" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
 
         </div>
 
-    </footer>
-</section>
+
+</footer>
 
 
 
