changing padding and some styling in homepage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <title>Luckybox</title>
 </head>
 <body>
-    <header>
+<header>
 <!-- navbar -->
-
 
     <nav  id="top" class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <a class="navbar-brand" href="index.html"><img src="img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
@@ -51,15 +50,19 @@
             </ul>
         </div>
     </nav>
+</header>
+<!--parallax-->
 
 <div class="container2">
 
     <div class="parallax">
-        <br/>
-       <img class="imagepar" src="img/tekst-white-02.png ">
-    </div>
 
+       <img class="imageparallax" src="img/tekst-white-02.png" alt="image for the parallax">
+    </div>
+<!--title-->
     <div class="titleBlack">The Original Fan-Powered Subscription</div>
+
+<!--intro text-->
     <div class="wrapper">
 
         <div class="content">
@@ -82,42 +85,21 @@
 </div>
 
 
+<!-- red section-->
 
-
-
-</header>
-
-
-
-
-
-
-
-
-<div id="information" >
+<div id="information">
     <div id="blink">  <h1 class="title pb-4">100% Customizable </h1></div>
-   <h2> LIMITED QUANTITIES AVAILABLE</h2>
+
+    <h2> LIMITED QUANTITIES AVAILABLE</h2>
 
    <p> Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets.</p>
    <small> *Mystery Boxes are not permanent items.<br/></small>
 
-
 </div>
 
+<!-- cards-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="container">
+<div class="container pb-5">
     <div class="row">
 
         <div class=" col-md-4 border-0  mx-auto text-center">
@@ -149,9 +131,13 @@
 
     </div>
 </div>
-<br>
-<div class="card align-items-center">
-    <div class="card mb-3" style="max-width: 540px;">
+
+
+<!-- featurettes-->
+
+<div class="card align-items-center mt-5">
+
+    <div class="card mb-3">
         <div class="row no-gutters flex-row-reverse">
             <div class="col-md-4">
                 <img src="img/surprisebox.png" class="card-img" alt="surprisebox">
@@ -172,7 +158,7 @@
     </div>
 
 
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3">
         <div class="row no-gutters">
             <div class="col-md-4">
                 <img src="img/luckydip.jpg" class="card-img" alt="luckydip">
@@ -189,7 +175,7 @@
     </div>
 
 
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3">
         <div class="row no-gutters flex-row-reverse ">
             <div class="col-md-4">
                 <img src="img/mailbox.jpeg" class="card-img" alt="mailbox">
