--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="parallax">
 
-       <img class="imageparallax" src="img/tekst-white-02.png" alt="image for the parallax">
+       <img class="imageparallax" src="img/LuckyTekst.png" alt="image for the parallax">
     </div>
 <!--title-->
     <div class="titleBlack">The Original Fan-Powered Subscription</div>
