--- a/html/custom.html
+++ b/html/custom.html
@@ -71,7 +71,7 @@
             <div class="carousel-item active">
                 <img class="d-block w-auto" src="../img/moviebanner.jpg" height="300px" alt="First slide">
                 <div class="carousel-caption">
-                    <p><a class="btn btn-lg btn-primary" href="#movierow" role="button">Movies</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="#step2id" role="button">Movies</a></p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -79,7 +79,7 @@
 
                 <div class="carousel-caption">
 
-                    <p><a class="btn btn-lg btn-primary" href="#snackrow" role="button">Snacks</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="#step2id" role="button">Snacks</a></p>
                 </div>
 
             </div>
@@ -88,7 +88,7 @@
 
                 <div class="carousel-caption">
 
-                    <p><a class="btn btn-lg btn-primary" href="#hobbyrow" role="button">Hobby</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="#step2id" role="button">Hobby</a></p>
 
                 </div>
             </div>
@@ -124,30 +124,30 @@
 
 
                 <div class="containerpt-5 d-flex pt-5 pl-5">
-                    <h2 class="step stepcount"> Step 1</h2>
+                    <h2 class="step stepcount" id="step2id"> Step 2</h2>
                     <h2 class="stepInfo"> choose your box size</h2>
                 </div>
 
                 <div class="row justify-content-center align-items-stretch">
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid" src="../img/customBOX2.png" alt="Generic placeholder image" width="140">
+                        <img class="img-fluid mb-3" src="../img/customBOX3.png" alt="Generic placeholder image" width="200" height="200px">
                         <h2>Small Box</h2>
                         <p>A small sized box containing multiple smaller items with less choice options</p>
-                        <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
+                        <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid" src="../img/customBOX.png" width="200" >
+                        <img class="img-fluid" src="../img/customBOX2.png" width="200" height="200px" >
                         <h2>Medium Box</h2>
                         <p>An average size box with a decent amount of items from all choice options</p>
-                        <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
+                        <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid" src="../img/customBOX3.png" width="300" >
+                        <img class="img-fluid" src="../img/customBOX.png" width="200" height="200px" >
                         <h2>Big Box</h2>
                         <p>A large sized box containing a large amount of items from all choice options </p>
-                        <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
+                        <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
                 </div>
 
@@ -184,20 +184,29 @@
         </div>
         <div class="hover01">
             <figure><img  src="../img/moviegadget2.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> spider-man t-shirt</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">spider-man tshirt </span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/moviegadget3.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> car back to the future</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Back to the future car </span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/moviegadget4.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> James Bond Q pin</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">James Bond Q pin </span>
+                </label>
             </div>
         </div>
     </div>
@@ -208,26 +217,38 @@
 
         <div class="hover01">
             <figure><img  src="../img/snack1.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Reese's Pieces</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Reese's pieces</span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/snack2.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Poppin Cooking Sushi</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Poppin Cooking Sushi</span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/snack3.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Lays Thai Chili</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Lays Thai Chili </span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/snack4.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Original Beef Jerky</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Original Beef Jerky </span>
+                </label>
             </div>
         </div>
     </div>
@@ -236,26 +257,38 @@
     <div class="row" id="hobbyrow">
         <div class="hover01">
             <figure><img  src="../img/hobby1.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Panthera Ink</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Panthera Ink </span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/hobby2.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Loctite super glue</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Loctite Super Glue</span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/hobby3.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> acrylic paint set</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Acrylic Paint Set</span>
+                </label>
             </div>
         </div>
         <div class="hover01">
             <figure><img  src="../img/hobby4.jpg" width="200" height="200"></figure>
-            <div>
-                <label><input type="checkbox" /> Human Limb figure</label>
+            <div class="buttonChange">
+                <label>
+                    <input type="checkbox" />
+                    <span class="seatButton">Human Limb </span>
+                </label>
             </div>
         </div>
     </div>
