--- a/html/custom.html
+++ b/html/custom.html
@@ -22,8 +22,8 @@
 <div>
 <!-- navbar-->
 
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
-        <a class="navbar-brand" href="../index.html">Lucky Box</a>
+    <nav id="top" class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        <a class="navbar-brand" href="../index.html"><img src="../img/logo-white-01.png" alt="icon brand" width="100vw"/></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,6 +52,7 @@
             </ul>
         </div>
     </nav>
+
 
     <!-- featurette-->
 
@@ -300,23 +301,21 @@
 
 </div>
 <!-- footer -->
-<section class="footer">
+<footer class="footer sticky-footer">
 
-    <a href="#"><i class="fas fa-arrow-up"></i></a>
 
-    <footer id="sticky-footer" class=" bg-dark text-white-50">
-        <div class="container-fluid d-flex py-3">
+    <div class="container-fluid d-flex py-0 align-items-end">
 
-            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+        <p class=" flex-grow-1 py-3"> &copy; 2019 Lucky box &nbsp; &nbsp; <span class=" mr-auto pr-3"><a href="#top">Back to top</a></span></p>
 
-            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" width="30" height="30" alt="insta icon"></a>
+        <a class="py-4 pr-4" href="https://www.instagram.com/" target="_blank"><img src="../ICONS/instaiconwhite-06.png" width="30" height="30"></a>
 
-            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30" alt="twitter icon"></a>
+        <a  class="py-4 pr-4" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="../ICONS/twitter.svg" width="30" height="30"></a>
 
-        </div>
+    </div>
 
-    </footer>
-</section>
+
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
