--- a/html/custom.html
+++ b/html/custom.html
@@ -119,14 +119,11 @@
 
 <div  class="container bgcontainer mt-4 pb-3">
 
-
-
-    <!-- 3 large colums with text centered -->
-
-
-                <div class="containerpt-5 d-flex pt-5 pl-5">
+                <div class="container  d-flex pt-5 pl-5">
+                    <div class="container row steptitle">
                     <h2 class="step stepcount" id="step2id"> Step 2</h2>
                     <h2 class="stepInfo"> choose your box size</h2>
+                    </div>
                 </div>
 
                 <div class="row justify-content-center align-items-stretch">
@@ -294,7 +291,7 @@
         </div>
     </div>
     <div class="submitbutton">
-    <p><a class="btn btn-primary " href="#2ndStep" role="button">SUBMIT</a></p>
+    <p><a class="btn btn-primary mt-3 mb-3 " href="../html/Login.html" role="button">SUBMIT</a></p>
     </div>
 
 </div>
