fixed alignment and put last block centered

--- a/html/custom.html
+++ b/html/custom.html
@@ -60,7 +60,7 @@
 <h1  class="text-center  titleRed">Customize your box</h1>
 
 
-        <div class="container  bgcontainer p-5">
+        <div class="container  bgcontainer pb-5 pt-2">
             <div class="container row steptitle">
                 <h2 class="step stepcount"> Step 1</h2>
                 <h2 class="stepInfo">Select the theme you like!</h2>
@@ -119,7 +119,7 @@
 
 <div  class="container bgcontainer mt-4 pb-3">
 
-                <div class="container  d-flex pt-5 pl-5">
+                <div class="container  d-flex pt-2 pl-5">
                     <div class="container row steptitle">
                     <h2 class="step stepcount" id="step2id"> Step 2</h2>
                     <h2 class="stepInfo"> choose your box size</h2>
@@ -156,8 +156,8 @@
 
 <!-- ///////////////////////////////////BEGINNING OF items -->
 
-<div class="bgcontainer">
-<div class="mt-4 pb-3">
+<div class="bgcontainer container">
+<div class="mt-4 pb-1">
     <div class="container row steptitle pt-5">
         <h2 class="step stepcount"> Step 3</h2>
         <h2 class="stepInfo">Select your items!</h2>
@@ -165,12 +165,12 @@
 
 </div>
 
-<div id="lootlist">
 
 
 
 
-    <div class="row pt-3" id="movierow">
+<!-- container rows in d-flex to put content in the center inside a bigger container -->
+    <div class=" container row pt-3 d-flex justify-content-center" id="movierow">
         <div class="hover01">
         <figure> <img src="../img/moviegadget1.jpg" width="200" height="200"> </figure>
             <div class="buttonChange">
@@ -211,7 +211,7 @@
 
 
 
-    <div class="row" id="snackrow">
+    <div class=" container row d-flex justify-content-center" id="snackrow">
 
         <div class="hover01">
             <figure><img  src="../img/snack1.jpg" width="200" height="200"></figure>
@@ -252,7 +252,7 @@
     </div>
 
 
-    <div class="row" id="hobbyrow">
+    <div class="container row d-flex justify-content-center" id="hobbyrow">
         <div class="hover01">
             <figure><img  src="../img/hobby1.jpg" width="200" height="200"></figure>
             <div class="buttonChange">
@@ -296,7 +296,7 @@
 
 </div>
 
-</div>
+
 <!-- footer -->
 <footer class="footer sticky-footer">
 
