changed pictures and background information, removed the blinker

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <!-- red section-->
 
 <div id="information">
-    <div id="blink">  <h1 class="title pb-4">100% Customizable </h1></div>
+    <h1 class="title pb-4">100% Customizable </h1>
 
     <h2> LIMITED QUANTITIES AVAILABLE</h2>
 
@@ -140,7 +140,7 @@
     <div class="card mb-3">
         <div class="row no-gutters flex-row-reverse">
             <div class="col-md-4">
-                <img src="img/surprisebox.png" class="card-img" alt="surprisebox">
+                <img src="img/Mystery-box.png" class="card-img" alt="surprisebox">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
