--- a/index.html
+++ b/index.html
@@ -140,14 +140,12 @@
     <div class="card mb-3">
         <div class="row no-gutters flex-row-reverse">
             <div class="col-md-4">
-                <img src="img/Mystery-box.png" class="card-img" alt="surprisebox">
+                <img src="img/lucky.jpg" class="card-img" alt="surprisebox">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title" >Find the perfect box for you</h5>
                     <p class="card-text" >
-
-
                         No matter what you're interested in,
                         you'll find a subscription box you love.
                     </p>
