--- a/html/custom.html
+++ b/html/custom.html
@@ -65,9 +65,14 @@
                 <h2 class="step stepcount"> Step 1</h2>
                 <h2 class="stepInfo">Select the theme you like!</h2>
             </div>
+
+
+
             <div class="row">
                 <div class=" col-sm-12 col-md-6">
-                         <div id="carouselExampleControls" class="carousel slide  pb-3" data-ride="carousel col-6">
+                    <div id="carouselExampleControls" class="carousel slide  pb-3" data-ride="carousel col-6">
+
+
         <div class="carousel-inner ">
             <div class="carousel-item active">
                 <img class="d-block w-auto" src="../img/moviebanner.jpg" height="300px" alt="First slide">
@@ -131,6 +136,7 @@
                         <img class="img-fluid mb-3" src="../img/customBOX3.png" alt="Generic placeholder image" width="200" height="200px">
                         <h2>Small Box</h2>
                         <p>A small sized box containing multiple smaller items with less choice options</p>
+                        <h4> price 6$</h4>
                         <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
 
@@ -138,6 +144,7 @@
                         <img class="img-fluid" src="../img/customBOX2.png" width="200" height="200px" >
                         <h2>Medium Box</h2>
                         <p>An average size box with a decent amount of items from all choice options</p>
+                        <h4> price 10$</h4>
                         <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
 
@@ -145,6 +152,7 @@
                         <img class="img-fluid" src="../img/customBOX.png" width="200" height="200px" >
                         <h2>Big Box</h2>
                         <p>A large sized box containing a large amount of items from all choice options </p>
+                        <h4> price 15$</h4>
                         <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
                 </div>
