--- a/html/custom.html
+++ b/html/custom.html
@@ -127,7 +127,7 @@
                 <div class="container  d-flex pt-2 pl-5">
                     <div class="container row steptitle">
                     <h2 class="step stepcount" id="step2id"> Step 2</h2>
-                    <h2 class="stepInfo"> choose your box size</h2>
+                    <h2 class="stepInfo"> Choose your box size</h2>
                     </div>
                 </div>
 
@@ -136,7 +136,7 @@
                         <img class="img-fluid mb-3" src="../img/customBOX3.png" alt="Generic placeholder image" width="200" height="200px">
                         <h2>Small Box</h2>
                         <p>A small sized box containing multiple smaller items with less choice options</p>
-                        <h4> price 6$</h4>
+                        <h4> Price 6$</h4>
                         <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
 
@@ -144,7 +144,7 @@
                         <img class="img-fluid" src="../img/customBOX2.png" width="200" height="200px" >
                         <h2>Medium Box</h2>
                         <p>An average size box with a decent amount of items from all choice options</p>
-                        <h4> price 10$</h4>
+                        <h4> Price 10$</h4>
                         <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
 
@@ -152,7 +152,7 @@
                         <img class="img-fluid" src="../img/customBOX.png" width="200" height="200px" >
                         <h2>Big Box</h2>
                         <p>A large sized box containing a large amount of items from all choice options </p>
-                        <h4> price 15$</h4>
+                        <h4> Price 15$</h4>
                         <p><a class="btn btn-secondary" href="#movierow" role="button">pick this one &raquo;</a></p>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
-                    <span class="seatButton">baby yoda </span>
+                    <span class="seatButton">Baby Yoda </span>
                 </label>
             </div>
         </div>
@@ -193,7 +193,7 @@
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
-                    <span class="seatButton">spider-man tshirt </span>
+                    <span class="seatButton">Spider-Man T-shirt </span>
                 </label>
             </div>
         </div>
