--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Imane, Steve, Samira, Moeti">
     <meta name="description" content="Subscription box that is fully customisable"><!--description that appears on google search-->
     <!--links-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style.css">
