adding meta tags for social media

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Imane, Steve, Samira, Moeti">
     <meta name="description" content="Subscription box that is fully customisable"><!--description that appears on google search-->
+    <!-- social media link sharing tags-->
+    <!--twitter tags-->
+    <meta name="twitter:title" content="Lucky Box">
+    <meta name="twitter:description" content="100% customisable subscription boxes at an affordable price">
+    <meta name="twitter:image" content="url (..img/bg1-white.jpg)">
+    <meta name="twitter:site" content="@Luckybox">
+    <meta name="twitter:creator" content="@becode">
+   <!--other social platforms like facebook, linkedin...-->
+    
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Lucky Box" />
+    <meta property="og:description" content="100% customisable subscription boxes at an affordable price" />
+    <meta property="og:image" content="url (..img/bg1-white.jpg)" />
+    <meta property="og:url" content="www.LuckyBox.com" />
+    <meta property="og:site_name" content="luckybox" />
+
     <!--links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
