--- a/html/custom.html
+++ b/html/custom.html
@@ -57,10 +57,11 @@
     <!-- featurette-->
 
 
-<h1  class="text-center  titleRed">Customize your box</h1>
+
 
 
         <div class="container  bgcontainer pb-5 pt-2">
+                <h1  class="customize text-center  ">Customize your box</h1>
             <div class="container row steptitle">
                 <h2 class="step stepcount"> Step 1</h2>
                 <h2 class="stepInfo">Select the theme you like!</h2>
