--- a/html/contact.html
+++ b/html/contact.html
@@ -59,7 +59,7 @@
     <div class="row">
         <div class="col-md-6 part1 pr-10">
             <!-- contact form -->
-            <form action="https://formspree.io/xaynkalb" method="POST">
+            <form action="https://formspree.io/xaynkalb" method="POST" target="_blank">
 
                 <h1>Contact us!</h1>
                 <p> voice your concerns, or simply drop a nice comment.</p>
