--- a/html/register.html
+++ b/html/register.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Imane, Steve, Samira, Moeti">
     <meta name="description" content="Subscription box that is fully customisable">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/register.css">
