--- a/html/contact.html
+++ b/html/contact.html
@@ -54,7 +54,7 @@
 </nav>
 
 <!-- page content -->
-
+<!--form-->
 <div class="container">
     <div class="row">
         <div class="col-md-6 part1 pr-10">
