--- a/html/Login.html
+++ b/html/Login.html
@@ -67,7 +67,7 @@
     <form class="form-signin col-sm-6">
         <h1 id="sign" class="h3 pt-3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
         <div class="social-login">
-            <a href="https://www.facebook.com/?stype=lo&jlou=AfeFixtso8rCyBdVjXgA_g2nKVuich39ogvszbFJHMgp1Y6XsHt5yzM65_AcyZEXkUIJpdB88SAyOaNG16ME2P_c&smuh=60962&lh=Ac-N7BbF7pzYj93c"><button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span> </button></a> 
+            <a target="_blank" href="https://www.facebook.com/?stype=lo&jlou=AfeFixtso8rCyBdVjXgA_g2nKVuich39ogvszbFJHMgp1Y6XsHt5yzM65_AcyZEXkUIJpdB88SAyOaNG16ME2P_c&smuh=60962&lh=Ac-N7BbF7pzYj93c"><button class="btn facebook-btn social-btn" type="button"><span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span> </button></a> 
         </div>
 
         <p style="text-align:center"> OR  </p>
