--- a/html/custom.html
+++ b/html/custom.html
@@ -134,7 +134,7 @@
 
                 <div class="row justify-content-center align-items-stretch">
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid mb-3" src="../img/customBOX3.png" alt="Generic placeholder image" width="200" height="200px">
+                        <img class="img-fluid mb-3" src="../img/customBOX3.png" alt="Generic placeholder image" width="200" height="200px" alt="product">
                         <h2>Small Box</h2>
                         <p>A small sized box containing multiple smaller items with less choice options</p>
                         <h4> Price 6$</h4>
@@ -142,7 +142,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid" src="../img/customBOX2.png" width="200" height="200px" >
+                        <img class="img-fluid" src="../img/customBOX2.png" width="200" height="200px" alt="product" >
                         <h2>Medium Box</h2>
                         <p>An average size box with a decent amount of items from all choice options</p>
                         <h4> Price 10$</h4>
@@ -150,7 +150,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-                        <img class="img-fluid" src="../img/customBOX.png" width="200" height="200px" >
+                        <img class="img-fluid" src="../img/customBOX.png" width="200" height="200px" alt="product" >
                         <h2>Big Box</h2>
                         <p>A large sized box containing a large amount of items from all choice options </p>
                         <h4> Price 15$</h4>
@@ -181,7 +181,7 @@
 <!-- container rows in d-flex to put content in the center inside a bigger container -->
     <div class=" container row pt-3 d-flex justify-content-center" id="movierow">
         <div class="hover01">
-        <figure> <img src="../img/moviegadget1.jpg" width="200" height="200"> </figure>
+        <figure> <img src="../img/moviegadget1.jpg" width="200" height="200" alt="product"> </figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -190,7 +190,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/moviegadget2.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/moviegadget2.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -199,7 +199,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/moviegadget3.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/moviegadget3.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -208,7 +208,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/moviegadget4.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/moviegadget4.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -223,7 +223,7 @@
     <div class=" container row d-flex justify-content-center" id="snackrow">
 
         <div class="hover01">
-            <figure><img  src="../img/snack1.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/snack1.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -232,7 +232,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/snack2.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/snack2.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -241,7 +241,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/snack3.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/snack3.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -250,7 +250,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/snack4.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/snack4.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -263,7 +263,7 @@
 
     <div class="container row d-flex justify-content-center" id="hobbyrow">
         <div class="hover01">
-            <figure><img  src="../img/hobby1.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/hobby1.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -272,7 +272,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/hobby2.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/hobby2.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -281,7 +281,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/hobby3.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/hobby3.jpg" width="200" height="200" alt="product" ></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
@@ -290,7 +290,7 @@
             </div>
         </div>
         <div class="hover01">
-            <figure><img  src="../img/hobby4.jpg" width="200" height="200"></figure>
+            <figure><img  src="../img/hobby4.jpg" width="200" height="200" alt="product"></figure>
             <div class="buttonChange">
                 <label>
                     <input type="checkbox" />
