adding icon on tab

--- a/html/custom.html
+++ b/html/custom.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Subscription box, box, gift, gift idea, custom box">
     <meta name="robots" content="index,follow"> <!-- search engine crawler will follow all indexes of the page, appear on google faster -->
-    <link rel="icon" href="/img/icon.png"> <!--icon tab>-->
+    <link rel="icon" href="/img/bg-1.jpg"> <!--icon tab>-->
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Imane, Steve, Samira, Moeti">
     <meta name="description" content="Subscription box that is fully customisable">
