--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 
     <meta name="robots" content="index,follow"> <!-- search engine crawler will follow all indexes of the page, appear on google faster -->
-    <link rel="icon" href="../img/icon.png"> <!--icon tab>-->
+    <link rel="icon" href="img/bg-1.jpg"> <!--icon tab>-->
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Imane, Steve, Samira, Moeti">
     <meta name="description" content="Subscription box that is fully customisable">
