--- a/index.html
+++ b/index.html
@@ -136,50 +136,48 @@
 
 <!-- featurettes-->
 
-<div class="card align-items-center mt-5">
+<div class="container align-items-center mt-5">
 
-    <div class="card mb-3">
-        <div class="row no-gutters flex-row-reverse">
-            <div class="col-md-4">
-                <img src="img/lucky.jpg" class="card-img" alt="surprisebox">
+    <div class="card mb-3 ">
+        <div class="row no-gutters flex-row-reverse ">
+            <div class="col-md-4   ">
+                <img src="img/lucky.jpg" class="card-img" alt="mailbox">
             </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title" >Find the perfect box for you</h5>
-                    <p class="card-text" >
-                        No matter what you're interested in,
-                        you'll find a subscription box you love.
-                    </p>
+            <div class="col-md-8 text-center pt-5">
+                <div class="card-body ">
+                    <h5 class="card-title">Find the perfect box for you
+                    </h5>
+                    <p class="card-text">No matter what you're interested in,
+                        you'll find a subscription box you love.</p>
 
                 </div>
             </div>
         </div>
     </div>
 
-
-    <div class="card mb-3">
-        <div class="row no-gutters">
-            <div class="col-md-4">
-                <img src="img/luckydip.jpg" class="card-img" alt="luckydip">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title" >Find monthly new boxes</h5>
-                    <p class="card-text" >Browse hundreds of subscription boxes,
-                        all in one place.</p>
+    <div class="card mb-3 ">
+        <div class="row no-gutters flex-row-reverse ">
+            <div class="col-md-8 text-center pt-5 ">
+                <div class="card-body ">
+                    <h5 class="card-title">Receive fun things in your mail
+                    </h5>
+                    <p class="card-text">Receive curated products just for you
+                        on a recurring basis.</p>
 
                 </div>
             </div>
+            <div class="col-md-4 ">
+                <img src="img/luckydip.jpg" class="card-img" alt="mailbox">
+            </div>
         </div>
     </div>
-
 
     <div class="card mb-3 ">
         <div class="row no-gutters flex-row-reverse ">
             <div class="col-md-4 ">
-                <img src="img/mailbox.jpeg" class="card-img" alt="mailbox">
+                <img src="img/mailbox.jpeg" class="card-img" alt="mailbox" height="250vh" width="250vh">
             </div>
-            <div class="col-md-8 ">
+            <div class="col-md-8 text-center pt-5">
                 <div class="card-body ">
                     <h5 class="card-title">Receive fun things in your mail
                     </h5>
@@ -190,6 +188,8 @@
             </div>
         </div>
     </div>
+
+
 </div>
 
 
